# DB_from_scratch

./: .gitignore  CMakeLists.txt
src/: main.cpp  table.cpp  table.h
src/core/: db_context.cpp  db_context.h  metadata.cpp  metadata.h  row_reader.cpp  row_reader.h  storage.cpp  storage.h
src/parser/: parser.cpp  parser.h
src/query/: create.cpp  drop.cpp  insert.cpp  query.h  select.cpp  use.cpp
